# Azure-Healthcare-Marketplace-Demo

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Agent.md  CONTRIBUTING.md  Makefile  README.md  anthropic-healthcare-analysis.md  azure.yaml  docker-compose.yml  pyproject.toml
.beads/: issues.jsonl
.claude-plugin/: marketplace.json
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: azd_deploy.yml  deploy.yml  main_staging_ci.yml
.runs/: README.md
azure-fhir-mcp-server/src/: coverage-policy.ts  fhir-client.ts  index.ts
data/: README.md
data/cases/: ground_truth.json
data/samples/: README.md
deploy/: README.md
deploy/infra/: main.bicep  main.bicepparam  main.bicepparam.back  main.json
docs/: DECOMPLEX-PERF-EVALS.md  DEVELOPER-GUIDE.md  GETTING-STARTED.md  LOCAL-TESTING.md  MCP-OAUTH-PRM.md  MCP-SERVERS-BEGINNER-GUIDE.md  PRIOR-AUTH-OPTIMIZATION.md  SKILLS-FLOW-MAP.md  anthropic-healthcare-analysis.md
docs/architecture/: APIM-ARCHITECTURE.md  RETRIEVAL-ARCHITECTURE.md
foundry-integration/: README.md  agent_config.yaml  agent_setup.py  tools_catalog.json
samples/azure-fhir-mcp-server/: README.md  package.json
scripts/: create-cap-host.sh  delete-cap-host-azd.sh  delete-cap-host.sh  deploy-mcp-containers.sh  eval_contracts.py  eval_latency.py  eval_native_agent_framework.py  eval_prior_auth.py  get_apim_key.py  local-test.sh  mcp-http-proxy.js  mcp-local-proxy.js  mcp-local-start-and-proxy.sh  mcp.json.template  postdeploy.sh  requirements.txt  seed_cosmos_policies.py  setup-mcp-servers.sh  setup_mcp_servers.py  sync-local-env-from-azd.sh  test-apim-passthrough.sh
scripts/setup-cli/: __main__.py  checks.py  cli.py  deploy.py  requirements.txt  servers.py  styles.py  testing.py  troubleshoot.py
src/agents/: .env.example  (+9 more)
tests/: __init__.py  conftest.py
vscode-extension/: README.md  package.json  tsconfig.json
waypoints/: assessment.json
(+126 files in other folders)
